Updates to run 1B vector data